--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,22 @@
 
       {{ content }}
 
+      <script src="https://giscus.app/client.js"
+        data-repo="xpko/xpko.github.io"
+        data-repo-id="MDEwOlJlcG9zaXRvcnkyNzM0NTQzNjk="
+        data-category="[ENTER CATEGORY NAME HERE]"
+        data-category-id="[ENTER CATEGORY ID HERE]"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+</script>
+
       {% if site.github.private != true and site.github.license %}
       <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
         This site is open source. {% github_edit_link "Improve this page" %}.
