--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,19 +28,19 @@
       {{ content }}
 
       <script src="https://giscus.app/client.js"
-        data-repo="xpko/xpko.github.io"
-        data-repo-id="MDEwOlJlcG9zaXRvcnkyNzM0NTQzNjk="
-        data-category="[ENTER CATEGORY NAME HERE]"
-        data-category-id="[ENTER CATEGORY ID HERE]"
-        data-mapping="pathname"
-        data-strict="0"
-        data-reactions-enabled="1"
-        data-emit-metadata="0"
-        data-input-position="bottom"
-        data-theme="preferred_color_scheme"
-        data-lang="zh-CN"
-        crossorigin="anonymous"
-        async>
+      data-repo="xpko/xpko.github.io"
+      data-repo-id="MDEwOlJlcG9zaXRvcnkyNzM0NTQzNjk="
+      data-category="Announcements"
+      data-category-id="DIC_kwDOEEyVIc4Clc68"
+      data-mapping="pathname"
+      data-strict="0"
+      data-reactions-enabled="1"
+      data-emit-metadata="0"
+      data-input-position="bottom"
+      data-theme="preferred_color_scheme"
+      data-lang="zh-CN"
+      crossorigin="anonymous"
+      async>
 </script>
 
       {% if site.github.private != true and site.github.license %}
