--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
       data-repo-id="MDEwOlJlcG9zaXRvcnkyNzM0NTQzNjk="
       data-category="Announcements"
       data-category-id="DIC_kwDOEEyVIc4Clc68"
-      data-mapping="pathname"
+      data-mapping="title"
       data-strict="0"
       data-reactions-enabled="1"
       data-emit-metadata="0"
