mov to blog-comments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       <script src="https://giscus.app/client.js"
       data-repo="xpko/xpko.github.io"
       data-repo-id="MDEwOlJlcG9zaXRvcnkyNzM0NTQzNjk="
-      data-category="Announcements"
+      data-category="blog-comments"
       data-category-id="DIC_kwDOEEyVIc4Clc68"
       data-mapping="pathname"
       data-strict="0"
