--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
       data-repo="xpko/xpko.github.io"
       data-repo-id="MDEwOlJlcG9zaXRvcnkyNzM0NTQzNjk="
       data-category="blog-comments"
-      data-category-id="DIC_kwDOEEyVIc4Clc68"
+      data-category-id="DIC_kwDOEEyVIc4CldBL"
       data-mapping="pathname"
       data-strict="0"
       data-reactions-enabled="1"
