--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
           c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
           t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-      })(window, document, "clarity", "script", "pq0c6v5pu3");
+      })(window, document, "clarity", "script", "pq0akddo6x");
   </script>
   </head>
   <!-- Google tag (gtag.js) -->
